# solucion-de-ecuaciones

./: main.py  pyproject.toml  requirements.txt
backend/: main.py  parser.py  requeriments.txt
backend/ecuaciones_solver.egg-info/: PKG-INFO  SOURCES.txt  requirements.txt
backend/methods/: bairstow.py  bairstow2.py  base.py  biseccion.py  cuad_mod.py  cuadratica.py  falsa_posicion.py  ferrari.py  horner.py  lineal.py  muller.py  newton.py  newton_mod.py  punto_fijo.py  secante.py  tartaglia.py
frontend/: index.html  style.css
